--- a/kadai_022/kadai_022.html
+++ b/kadai_022/kadai_022.html
@@ -33,15 +33,11 @@
                 <p>傘は必要ないでしょう。</p>
                 <img src="images/sunny.png" alt="">
             </div>
-
+            </div>
         </main>
-        </header>
-    </body>
-
     <footer>
         <a href="https://www.sejuku.net/corp/">&copy;SAMURAI WEATHER NEWS
         </a>
-  </footer>
-
-
-
+    </footer>
+    </body>
+</html>
